Name: haxr
Version: 2007.2.5
Copyright: Bjorn Bringert, 2003-2006
Build-depends: haskell98, base, mtl, network, 
               HaXml < 1.14, HTTP
License: BSD4
License-file: LICENSE
Author: Bjorn Bringert <bjorn@bringert.net>
Maintainer: Bjorn Bringert <bjorn@bringert.net>
Homepage: http://www.haskell.org/haxr/
Description:
        HaXR is a library for writing XML-RPC 
        client and server applications in Haskell.
Exposed-Modules:
        Network.XmlRpc.Client,
        Network.XmlRpc.Server,
        Network.XmlRpc.Internals,
        Network.XmlRpc.Introspect
Other-Modules:
        Network.XmlRpc.Base64,
        Network.XmlRpc.DTD_XMLRPC
Extensions: OverlappingInstances, TypeSynonymInstances
GHC-options: -O2
