name:               haxr
version:            3000.11.2
author:             Bjorn Bringert <bjorn@bringert.net>
maintainer:         Brent Yorgey <byorgey@gmail.com>
copyright:          Bjorn Bringert, 2003-2006
license:            BSD3
license-file:       LICENSE
homepage:           http://www.haskell.org/haskellwiki/HaXR
category:           Network
build-type:         Simple
cabal-version:      >=1.10
synopsis:           XML-RPC client and server library.
description:
        HaXR is a library for writing XML-RPC
        client and server applications in Haskell.

extra-source-files:
        CHANGES
        examples/make-stubs.hs        examples/parse_response.hs    examples/Person.hs
        examples/PersonTH.hs          examples/person_client.hs     examples/person_server.hs
        examples/raw_call.hs          examples/simple_client.hs     examples/simple_server.hs
        examples/test_client.hs       examples/test_server.hs       examples/time-xmlrpc-com.hs
        examples/validate.hs          examples/Makefile
bug-reports: https://github.com/byorgey/haxr/issues
tested-with: GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

source-repository head
  type:     git
  location: git://github.com/byorgey/haxr.git

library
  hs-source-dirs: src
  build-depends:  base              >= 4.6 && < 5
                , base-compat
                , mtl
                , time
                , text
                , tagsoup
                , snap-core         >= 0.6
                , snap-server       >= 0.6
                , containers
                , old-locale
                , bytestring
                , http-types
                , http-client       >= 0.4.30
                , http-client-tls
                , network-uri
                , transformers
                , transformers-compat
                , template-haskell
                , base64-bytestring

  exposed-modules:    Network.XmlRpc.Internals
                    , Network.XmlRpc.Server
                    , Network.XmlRpc.Client
                    , Network.XmlRpc.TH
  other-modules:      Network.XmlRpc.Base64
                    , Network.XmlRpc.BasicAuth

  default-extensions: OverloadedStrings
  default-language:   Haskell2010
