Name: XmlRpc
Version: 2005.4.19
Copyright: Bjorn Bringert, 2003-2005
Build-depends: haskell98, base, mtl, HaXml, HTTP
License: BSD4
License-file: LICENSE
Author: Bjorn Bringert <bjorn@bringert.net>
Maintainer: Bjorn Bringert <bjorn@bringert.net>
Homepage: http://www.dtek.chalmers.se/~d00bring/haskell-xml-rpc/
Description:
        Haskell XML-RPC is a library for writing XML-RPC 
        client and server applications in Haskell.
Category: Xml
Exposed-Modules:
        Network.XmlRpc.Client,
        Network.XmlRpc.Server,
        Network.XmlRpc.Internals,
        Network.XmlRpc.Introspect,
        Network.XmlRpc.THDeriveXmlRpcType
Other-Modules:
        Network.XmlRpc.DTD_XMLRPC
Extensions: OverlappingInstances, TypeSynonymInstances
GHC-options: -O2
