Name: XmlRpc
Version: 2006.6.26
Copyright: Bjorn Bringert, 2003-2005
Build-depends: haskell98, base, mtl, network, 
               HaXml, HTTP, template-haskell
License: BSD4
License-file: LICENSE
Author: Bjorn Bringert <bjorn@bringert.net>
Maintainer: Bjorn Bringert <bjorn@bringert.net>
Homepage: http://www.haskell.org/xmlrpc/
Description:
        HaXR is a library for writing XML-RPC 
        client and server applications in Haskell.
Exposed-Modules:
        Network.XmlRpc.Client,
        Network.XmlRpc.Server,
        Network.XmlRpc.Internals,
        Network.XmlRpc.Introspect,
        Network.XmlRpc.THDeriveXmlRpcType
Other-Modules:
        Network.XmlRpc.Base64,
        Network.XmlRpc.DTD_XMLRPC
Extensions: OverlappingInstances, TypeSynonymInstances, TemplateHaskell
GHC-options: -O2
