Name: haxr-th
Version: 2007.2.5
Copyright: Bjorn Bringert, 2003-2006
Build-depends: base, haxr >= 2007.2.5, template-haskell
License: BSD4
License-file: ../LICENSE
Author: Bjorn Bringert <bjorn@bringert.net>
Maintainer: Bjorn Bringert <bjorn@bringert.net>
Homepage: http://www.haskell.org/haxr/
Synopsis: Automatic deriving of XML-RPC structs for Haskell records.
Description:
        HaXR is a library for writing XML-RPC 
        client and server applications in Haskell.
        This package adds automatic deriving of
        XML-RPC structs for Haskell records,
        using Template Haskell.
Exposed-Modules:
        Network.XmlRpc.THDeriveXmlRpcType
Extensions: OverlappingInstances, TypeSynonymInstances, TemplateHaskell
GHC-options: -O2
